рефакторинг кода, добавлено больше проверок ограничений в файловых провайдерах